backend: healthcheck, actuator, security, jwt filter güncellemeleri